--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,23 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      # 2. Log in to GHCR using the default GITHUB_TOKEN
+      # 2) Set up QEMU for multi-arch support
+      # This step is required for building images for non-native architectures (e.g., ARM).
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: arm, arm64
+
+      # 3) Set up Docker Buildx (which uses the docker-container driver)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          install: true
+          driver-opts: |
+            image=moby/buildkit:latest
+            network=host
+
+      # 4. Log in to GHCR using the default GITHUB_TOKEN
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
@@ -23,16 +39,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 3. Build and push your image
+      # 5. Build and push your image
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm/v7
-          push: true
-          tags: |
-            ghcr.io/varadrane7/portfolio:latest
-            ghcr.io/varadrane7/portfolio:${{ github.sha }}
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm/v7 \
+            --tag ghcr.io/varadrane7/portfolio:latest \
+            --tag ghcr.io/varadrane7/portfolio:${{ github.sha }} \
+            --push \
+            .
 
   deploy-to-vps:
     runs-on: unbuntu-latest
