--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-and-push-image:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       # 1. Check out your repo
@@ -50,7 +50,7 @@ jobs:
             .
 
   deploy-to-vps:
-    runs-on: unbuntu-latest
+    runs-on: self-hosted
     needs:
       - build-and-push-image
     steps:
