--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -85,27 +85,27 @@ jobs:
   #           --amend ghcr.io/varadrane7/portfolio:arm64-${{ github.sha }}
   #         docker manifest push ghcr.io/varadrane7/portfolio:${{ github.sha }}
 
-  deploy-to-vps:
-    runs-on: self-hosted
-    needs:
-      # - build-amd64
-      - build-arm64
-      # - create-manifest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+  # deploy-to-vps:
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     # - build-amd64
+  #     - build-arm64
+  #     # - create-manifest
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
     
-    - name: create env file
-      run: |
-        echo "GIT_COMMIT_HASH=${{ github.sha }}" >> ./envfile
+  #   - name: create env file
+  #     run: |
+  #       echo "GIT_COMMIT_HASH=${{ github.sha }}" >> ./envfile
     
-    - name: Docker Stack Deploy
-      uses: cssnr/stack-deploy-action@v1
-      with:
-        name: varad-portfolio
-        file: docker-stack.yaml
-        host: 150.230.235.239
-        user: deploy
-        ssh_key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
-        env_file: ./envfile
+  #   - name: Docker Stack Deploy
+  #     uses: cssnr/stack-deploy-action@v1
+  #     with:
+  #       name: varad-portfolio
+  #       file: docker-stack.yaml
+  #       host: 150.230.235.239
+  #       user: deploy
+  #       ssh_key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
+  #       env_file: ./envfile
 
